updated to hugo 60, added description of Syborg on /syborg page + link to play store, fixed padding on small screens.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,10 @@ a {
     text-decoration: unset;
 }
 
+.secondary {
+    color: #3cdc3c;
+}
+
 html, body {
     position: relative;
     background-color: rgba(0,0,0,1);
@@ -47,7 +51,6 @@ html, body {
 
 .post {
     height: 100%;
-    padding: 0px 20px;
 }
 
 .post-content {
